--- a/Frontend/citizenconnect360/src/app/header/header.component.html
+++ b/Frontend/citizenconnect360/src/app/header/header.component.html
@@ -1,14 +1,22 @@
-<div class="connect">
-    CITIZENCONNECT360
+<div class="maincontainer">
+    <div class="connect">
+        CITIZENCONNECT360
+    </div>
+    <div class="mainheader-container">
+        <nav class="header-container">
+            <a routerLink="/educate" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Educate</a>
+            <a routerLink="/views" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Views</a>
+            <a routerLink="/incidents" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Incidents</a>
+            <a routerLink="/polls" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Polls</a>
+            <a routerLink="/login" routerLinkActive="active" *ngIf="!authService.isLoggedIn()">Login</a>
+            <a routerLink="/signup" routerLinkActive="active" *ngIf="!authService.isLoggedIn()">Register</a>
+            <a href="#" (click)="logout()" *ngIf="authService.isLoggedIn()">Logout</a>
+        </nav>
+    
+    </div>
+
 </div>
 
-<!-- <nav class="header-container">
-    <a routerLink="/educate" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Educate</a>
-    <a routerLink="/views" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Views</a>
-    <a routerLink="/incidents" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Incidents</a>
-    <a routerLink="/polls" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Polls</a>
-    <a routerLink="/login" routerLinkActive="active" *ngIf="!authService.isLoggedIn()">Login</a>
-    <a routerLink="/signup" routerLinkActive="active" *ngIf="!authService.isLoggedIn()">Register</a>
-    <a href="#" (click)="logout()" *ngIf="authService.isLoggedIn()">Logout</a>
-</nav> -->
+
+
   
