--- a/Frontend/citizenconnect360/src/app/app.component.html
+++ b/Frontend/citizenconnect360/src/app/app.component.html
@@ -1,6 +1,4 @@
-<!-- <app-header></app-header>
-<router-outlet></router-outlet> -->
-<!-- <app-header></app-header> -->
-<app-login></app-login>
-<!-- <app-signup></app-signup> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
+
+
