worked on citizen components

--- a/Frontend/citizenconnect360/src/app/header/header.component.html
+++ b/Frontend/citizenconnect360/src/app/header/header.component.html
@@ -4,9 +4,11 @@
     </div>
     <div class="mainheader-container">
         <nav class="header-container">
+            <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
             <a routerLink="/educate" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Educate</a>
             <a routerLink="/views" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Views</a>
             <a routerLink="/incidents" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Incidents</a>
+            <a routerLink="/ReportIncident" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">ReportIncident</a>
             <a routerLink="/polls" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Polls</a>
             <a routerLink="/login" routerLinkActive="active" *ngIf="!authService.isLoggedIn()">Login</a>
             <a routerLink="/signup" routerLinkActive="active" *ngIf="!authService.isLoggedIn()">Register</a>
