--- a/Frontend/citizenconnect360/src/app/home/home.component.html
+++ b/Frontend/citizenconnect360/src/app/home/home.component.html
@@ -1,15 +1,12 @@
 <div class="home-content">
-    <div class="background-image">
-        
-    </div>
-
+    <div class="background-image"></div>
     <div class="content-wrapper">
-        <h1>CITIZEN CONNECT360 ALLOWS CITIZENS TO</h1>
-        <p>LEARN THE FINANCE BILL IN A FREE AND FAST</p>
-        <p>AND RELIABLE MANNER.</p>
-        <p>USE OUR RELIABLE SERVICES TO READ THE FINANCE BILL</p>
-        <p>REPORT INCIDENTS, PARTICIPATE IN POLLS AND ADD YOUR VIEWS</p>
+        <h1>CITIZEN CONNECT360</h1>
+        <p>LEARN THE FINANCE BILL IN A FREE, FAST AND RELIABLE MANNER.</p> 
+        <p>USE OUR RELIABLE SERVICES TO READ THE FINANCE BILL.</p>
+        <p>REPORT INCIDENTS, PARTICIPATE IN POLLS AND ADD YOUR VIEWS</p> 
         <p>JOIN OUR WEBSITE FOR FREE</p>
     </div>
 </div>
+
 
