--- a/Frontend/citizenconnect360/src/app/polls/polls.component.html
+++ b/Frontend/citizenconnect360/src/app/polls/polls.component.html
@@ -1,1 +1,19 @@
-<p>polls works!</p>
+<div class="main-container">
+    <div class="polls-container">
+      <div class="polls-header">
+        <h1>ACTIVE POLLS</h1>
+      </div>
+      <div *ngFor="let poll of polls" class="poll">
+        <h2>Poll Title: {{ poll.title }}</h2>
+        <p>{{ poll.question }}</p>
+        <div class="poll-options">
+          <label class="poll-option" *ngFor="let option of poll.options">
+            <input type="radio" name="{{ poll.title }}" (click)="vote(poll, option)">
+            {{ option.label }} ({{ option.percentage }}%)
+            <div class="progress-bar" [style.width.%]="option.percentage" [style.background-color]="getColor(option.label)"></div>
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+  
