--- a/Frontend/citizenconnect360/src/app/signup/signup.component.html
+++ b/Frontend/citizenconnect360/src/app/signup/signup.component.html
@@ -9,7 +9,7 @@
           <label for="username">Username</label>
         </div>
         <div class="input-group">
-          <input type="email" formControlName="Email" required>
+          <input type="email" formControlName="email" required>
           <label for="email">Email</label>
         </div>
         <div class="input-group">
