--- a/Frontend/citizenconnect360/src/app/home/home.component.css
+++ b/Frontend/citizenconnect360/src/app/home/home.component.css
@@ -1,36 +1,45 @@
 .home-content {
+    position: relative;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    height: 100vh; /* Adjust height based on your design */
-    background-color: #CCE6F4; /* Light blue background color */
-    color: #333; /* Text color */
-    padding: 20px;
+    align-items: center;
+    color: #333;
 }
 
 .background-image {
-    /* Style for background image of Nairobi city */
-    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8vR2NAaGV79H1Z-2A9VWqM0l3gCQ_nft7Qg&s');
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://ln.run/9Hz9o');
     background-size: cover;
     background-position: center;
-    width: 100%;
-    height: 100%; /* Adjust height based on your design */
-    margin-bottom: 20px;
+    z-index: 1;
 }
 
 .content-wrapper {
+    position: relative;
+    z-index: 2;
     text-align: center;
-    width: 50%;
-    height: 40%;
+    padding: 20px;
+    background-color: rgba(204, 230, 244, 0.8); /* Light blue with transparency */
+    width: 80%;
+    max-width: 800px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-    font-size: 2.5rem; /* Adjust font size */
+    font-size: 2rem; /* Adjust font size */
     margin-bottom: 10px;
 }
 
 p {
-    font-size: 1.2rem; /* Adjust font size */
-    line-height: 1.6;
+    font-size: 1.5rem; /* Adjust font size */
+    margin: 10px 0;
 }
+
+
