--- a/Frontend/citizenconnect360/src/app/government-dashboard/government-dashboard.component.html
+++ b/Frontend/citizenconnect360/src/app/government-dashboard/government-dashboard.component.html
@@ -1,1 +1,10 @@
-<p>government-dashboard works!</p>
+<div class="government-dashboard">
+    <div class="content">
+      <h1>Welcome to the Government Dashboard</h1>
+      <p>
+        All Government Officials are authorized to view reported <br/>incidences and citizen views, create and delete polls.<br/>
+        However, citizen’s data is protected by the law and any <br/>breach <br/>of our terms and conditions is taken seriously.
+      </p>
+    </div>
+  </div>
+  
