--- a/Frontend/citizenconnect360/src/app/incidents/incidents.component.html
+++ b/Frontend/citizenconnect360/src/app/incidents/incidents.component.html
@@ -1,4 +1,20 @@
 <div class="main-container">
+  <div class="header-box">
+    <h1>VIEW INCIDENTS</h1>
+  </div>
+  <div class="incidents-container">
+    <div *ngFor="let incident of incidents" class="incident-box">
+      <img [src]="incident.imageUrl" alt="Incident Image" class="incident-image">
+      <div class="incident-details">
+        <p><strong>Incident Title:</strong> {{ incident.title }}</p>
+        <p><strong>Incident Description:</strong> {{ incident.description }}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="main-container">
     <div class="header-box">
       <h1>VIEW INCIDENTS</h1>
     </div>
@@ -12,4 +28,4 @@
       </div>
     </div>
   </div>
-  
+   -->
