--- a/Frontend/citizenconnect360/src/app/educate/educate.component.html
+++ b/Frontend/citizenconnect360/src/app/educate/educate.component.html
@@ -3,10 +3,10 @@
       <div class="header-box">
         <h1>EDUCATE</h1>
       </div>
-      <div class="upload-section">
+      <!-- <div class="upload-section">
         <label for="pdfUpload">Upload PDF:</label>
         <input type="file" id="pdfUpload" (change)="onFileSelected($event)">
-      </div>
+      </div> -->
       <div class="chat-section">
         <div class="ai-chat-container">
           <!-- Chat Interface -->
