--- a/Frontend/citizenconnect360/src/app/government-dashboard/government-dashboard.component.html
+++ b/Frontend/citizenconnect360/src/app/government-dashboard/government-dashboard.component.html
@@ -1,4 +1,18 @@
 <div class="government-dashboard">
+  <div class="background-image"></div>
+  <div class="content">
+    <h1>Welcome to the Government Dashboard</h1>
+    <p>
+      All Government Officials are authorized to view reported incidences and citizen views, create and delete polls. However, citizen’s data is protected by the law and any breach of our terms and conditions is taken seriously.
+    </p>
+  </div>
+</div>
+
+
+<!-- <div class="government-dashboard">
+  <div class="backgroundimage">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjxWpHjCbrLO9F6jDFMKvPGQ3VyAMPG2ofXQ&s" alt="">
+  </div>
     <div class="content">
       <h1>Welcome to the Government Dashboard</h1>
       <p>
@@ -6,5 +20,5 @@
         However, citizen’s data is protected by the law and any <br/>breach <br/>of our terms and conditions is taken seriously.
       </p>
     </div>
-  </div>
+  </div> -->
   
