--- a/Frontend/citizenconnect360/src/app/incidents/incidents.component.css
+++ b/Frontend/citizenconnect360/src/app/incidents/incidents.component.css
@@ -4,14 +4,14 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(54, 245, 54, 0.2); /* Light green background with 20% opacity */
-    padding: 20px;
+    padding: 5px;
     /* height: 100vh; */
   }
   
   .header-box {
     /* background-color: #CCE6F4; */
     background-color:  #bbadff; /* Light blue background */
-    padding: 20px;
+    padding: 5px;
     text-align: center;
     border-radius: 10px;
     width: 80%;
@@ -22,28 +22,33 @@
   .incidents-container {
     width: 80%;
     max-width: 800px;
+    /* background-color: ; */
+    /* gap: 10px; */
   }
   
   .incident-box {
-    background-color: white; /* White background */
-    padding: 20px;
+    background-color: #CCE6F4; /* White background */
+    padding: 5px;
     margin-bottom: 20px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 25vh; /* Set height to 25% of the viewport height */
+    gap: 5px;
+    width: 100%;
+    height: 40vh; /* Set height to 25% of the viewport height */
   }
   
   .incident-image {
     width: 100%;
-    height: 60%; /* Set height to 60% of the incident box */
+    height: 70%; /* Set height to 60% of the incident box */
     object-fit: cover;
     margin-bottom: 10px;
     border-radius: 10px;
   }
   
   .incident-details {
+    height: 30%;
     text-align: center;
     flex: 1; /* Take remaining space */
     display: flex;
