--- a/Frontend/citizenconnect360/src/app/views/views.component.css
+++ b/Frontend/citizenconnect360/src/app/views/views.component.css
@@ -3,10 +3,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background-color: rgba(54, 245, 54, 0.1); /* Light green background with 10% opacity */
-  padding: 20px;
-  gap: 10px;
+  padding: 5px;
+  /* gap: 300px; */
+  height: 85vh;
 }
 
 .views-box {
